css/style.css
/* ... */
#experience .span {
    color: #fff;
    font-weight: normal;
    display: block;
    margin: auto;
    width: 100%;
    text-align: center;
    margin-bottom: 8px;
    opacity: .8;
}

#experience h2 {
    color: #fff;
    font-size: 35px;
    text-align: center;
    margin-bottom: 50px;
}

.experience-item {
    margin-bottom: 50px;
}

.experience-item:last-child {
    margin-bottom: 0px;
}

.experience-item img {
    height: 60px;
    display: block;
    margin: auto;
    margin-bottom: 25px;
}

.experience-group h3 {
    font-size: 35px;
    color: #fff;
    text-align: center;
    margin-bottom: 10px;
}

.experience-group p {
    font-size: 16px;
    color: #fff;
    text-align: center;
    opacity: .9;
}

/*-- -------------------------- -->
<---            FORM            -->
<--- -------------------------- -*/

#contact {
    height: auto;
    padding-top: 0;
    padding-bottom: 50px !important;
}

.contact-topper {
    font-weight: 700;
    font-size: 2.1875em;
    margin-bottom: 0px;
    position: relative;
    margin-top: 50px;
}

#contact h3 {
    width: 100%;
    margin-bottom: 25px;
    margin-top: 0;
    font-weight: bold;
    color: var(--primary);
}

.contact-topper span {
    color: var(--primary);
    display: inline-block;
    font-weight: bold;
    color: #fff;
    font-size: 30px;
}

/* Form */

#contact input[type="text"], 
#contact input[type="email"], 
#contact input[type="tel"], 
#contact input[type="url"], 
#contact textarea, 
#contact button[type="submit"] { 
    font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; 
}

#contact {
    background: #282828;
    position: relative;
    z-index: 3;
    max-width: 350px;
    margin: auto;
    padding: 40px 25px;
}

#contact h3 {
    display: block;
    font-size: 30px;
    font-weight: bold;
}

.form-text {
    margin: 0 0 30px 0;
    display:block;
    color: #414141;
    line-height: 1.6em;
}

form p{
    border: medium none !important;
    margin: 0 0 10px;
    min-width: 100%;
    padding: 0;
    width: 100%;
}

#contact input[type="text"], 
#contact input[type="email"], 
#contact input[type="tel"], 
#contact input[type="url"], 
#contact textarea {
    width:100%;
    border: none;
    border-bottom: 1px solid #CCC;
    background:transparent;
    margin:0 0 15px;
    padding:15px 15px 15px 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    opacity: .8;
}

#contact input[type="text"]:hover, 
#contact input[type="email"]:hover, 
#contact input[type="tel"]:hover, 
#contact input[type="url"]:hover, 
#contact textarea:hover {
    -webkit-transition:border-color 0.3s ease-in-out;
    -o-transition:border-color 0.3s ease-in-out;
    transition:border-color 0.3s ease-in-out;
    border:1px solid #AAA;
}

#contact textarea {
    height:100px;
    max-width:100%;
    resize:none;
    margin-bottom: 30px;
}

#contact button[type="submit"] {
    cursor:pointer;
    width: 100%;
    font-weight: 900;
    font-size: 1em;
    margin: 0;
    background: var(--primary);
    color: #fff;
    width: auto;
    padding: 10px 30px;
    border: none;
}

#contact button::before {
    border-color: var(--primary);
}

#contact button::after {
    border-color: var(--primary);
}

#contact button[type="submit"]:hover {
    opacity: .6;
    -webkit-transition:background 0.3s ease-in-out;
    -webkit-transition:background-color 0.3s ease-in-out;
    -o-transition:background-color 0.3s ease-in-out;
    transition:background-color 0.3s ease-in-out;
}

#contact button[type="submit"]:active { 
    -webkit-box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); 
    box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }

#contact input:focus, #contact textarea:focus {
    outline:0;
    border:1px solid #999;
}
::-webkit-input-placeholder {
 color:#888;
}
:-moz-placeholder {
 color:#888;
}
::-moz-placeholder {
 color:#888;
}
:-ms-input-placeholder {
 color:#888;
}

.form-h4 {
    font-size: 1.5625em;
}

.form-p {
    margin-bottom: 100px;
}

.form-submit {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
}

.review-right {
    padding-top: 50px;
}

.review-right img {
    width: 60px;
    margin-bottom: 20px;
}

.review-right h3 {
    font-size: 30px;
}

.review-right p {
    font-style: italic;
}

.reviewer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

.reviewer h4 {
    margin-bottom: 10px;
}

.reviewer img {
    width: 50px;
    margin: 0;
    margin-right: 15px;
}

.stars {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

.stars img {
    width: 15px;
    margin: 0 5px 0 0;
}

/*-- -------------------------- -->
<---         Get Started        -->
<--- -------------------------- -*/

#get-started {
    background: url("/images/image-14.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
}

#get-started:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: #000;
    opacity: .8;
}

.get-right {
    position: relative;
    z-index: 100;
}

.get-right h2 {
    color: #fff;
    font-size: 30px;
}

.get-right h2 span {
    color: var(--primary);
    font-weight: bold;
}

.get-right p {
    color: #fff;
}

.get-right button {
    width: 200px;
}
/* ... */

